--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Página no encontrada | SEÑORES</title>
-  <meta http-equiv="refresh" content="5; url=https://agenciaseniors.github.io/agencia/">
+  <meta http-equiv="refresh" content="5; url=https://agenciaseniors.com/">
   <link rel="stylesheet" href="css/styles.css">
   <style>
     body { display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; text-align: center; }
