--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   <meta name="geo.position" content="21.9297;-79.4425" />
   <meta name="ICBM" content="21.9297, -79.4425" />
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://agenciaseniors.github.io/agencia/">
+  <meta property="og:url" content="https://agenciaseniors.com/">
   <meta property="og:title" content="SEÑORES | Marketing Digital & Software en Cuba">
   <meta property="og:description" content="Ingeniería aplicada al marketing. Desarrollo de software y diseño web para MIPYMES y Hostales en Sancti Spíritus y el centro de Cuba.">
-  <meta property="og:image" content="https://agenciaseniors.github.io/agencia/img/diseno-identidad-visual-lujo-cuba.avif">
+  <meta property="og:image" content="https://agenciaseniors.com/img/diseno-identidad-visual-lujo-cuba.avif">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="agenciaseniors.github.io">
-  <meta property="twitter:url" content="https://agenciaseniors.github.io/agencia/">
+  <meta property="twitter:url" content="https://agenciaseniors.com/">
   <meta name="twitter:title" content="SEÑORES | Marketing Digital & Software en Cuba">
   <meta name="twitter:description" content="Ingeniería aplicada al marketing. Desarrollo de software y diseño web para MIPYMES y Hostales en Sancti Spíritus.">
-  <meta name="twitter:image" content="https://agenciaseniors.github.io/agencia/img/diseno-identidad-visual-lujo-cuba.avif">
+  <meta name="twitter:image" content="https://agenciaseniors.com/img/diseno-identidad-visual-lujo-cuba.avif">
   <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
   <link rel="icon" type="image/png" href="img/logo-192.png" sizes="192x192">
   <link rel="apple-touch-icon" href="img/logo-192.png">
@@ -42,36 +42,44 @@
   gtag('config', 'G-2YKF7LR287');
 </script>
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ProfessionalService",
-    "name": "Señores Agencia",
-    "image": "https://agenciaseniors.com//img/favicon.png",
-    "description": "Agencia de desarrollo de software y marketing digital especializada en negocios privados en Cuba.",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Sancti Spíritus",
-      "addressRegion": "SS",
-      "addressCountry": "CU"
-    },
-    "geo": {
-      "@type": "GeoCoordinates",
-      "latitude": 21.9297,
-      "longitude": -79.4425
-    },
-    "url": "https://agenciaseniors.com",
-    "telephone": "+5356621636",
-    "priceRange": "$$",
-    "openingHoursSpecification": {
-      "@type": "OpeningHoursSpecification",
-      "dayOfWeek": [
-        "Monday", "Tuesday", "Wednesday", "Thursday", "Friday"
-      ],
-      "opens": "09:00",
-      "closes": "18:00"
-    }
-  }
-  </script>
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Señores Agencia",
+  "image": "https://agenciaseniors.com/img/favicon.png",
+  "description": "Agencia de desarrollo de software y marketing digital especializada en negocios privados en Cuba.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Sancti Spíritus",
+    "addressRegion": "SS",
+    "addressCountry": "CU"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 21.9297,
+    "longitude": -79.4425
+  },
+  "url": "https://agenciaseniors.com/",
+  "telephone": "+5356621636",
+  "priceRange": "$$",
+  "areaServed": [
+    {"@type": "City", "name": "Sancti Spíritus"},
+    {"@type": "City", "name": "Santa Clara"},
+    {"@type": "City", "name": "Cienfuegos"},
+    {"@type": "City", "name": "Trinidad"}
+  ],
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+    "opens": "09:00",
+    "closes": "18:00"
+  },
+  "sameAs": [
+    "https://instagram.com/agency_seniors",
+    "https://www.facebook.com/share/1D3gRoWgpr/"
+  ]
+}
+</script>
 </head>
 <body>
 
