--- a/articulos/automatizacion-whatsapp-negocios.html
+++ b/articulos/automatizacion-whatsapp-negocios.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Automatiza tu WhatsApp y Vende 24/7 | Blog Señores</title>
-  <meta name="description" content="Deja de responder lo mismo 100 veces al día. Aprende a usar WhatsApp Business como una herramienta de venta automática para tu negocio." />
+  <title>Automatización de WhatsApp Business en Cuba: Chatbots y Ventas | Agencia Señores</title>
+<meta name="description" content="Configuración de respuestas automáticas y catálogos en WhatsApp. Atiende a tus clientes 24/7 sin esfuerzo. Soluciones de automatización para negocios cubanos." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
