--- a/articulos/branding-identidad-visual.html
+++ b/articulos/branding-identidad-visual.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tu logo barato te está costando clientes | Blog Señores</title>
-  <meta name="description" content="¿Tu negocio se ve profesional o amateur? Descubre por qué una buena Identidad Visual te permite cobrar más caro en el mercado cubano." />
+  <title>Diseño de Logotipos y Branding en Cuba: Imagen de Lujo | Agencia Señores</title>
+<meta name="description" content="Eleva el valor de tu marca. Diseño de identidad visual, logotipos y manuales de marca para negocios que buscan exclusividad en Cienfuegos y el centro de Cuba." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
