--- a/articulos/facebook-ads-cuba.html
+++ b/articulos/facebook-ads-cuba.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Más allá de Revolico: Marketing Real en Facebook | Blog Señores</title>
-  <meta name="description" content="Publicar en grupos de compraventa ya no es suficiente. Aprende cómo las estrategias de Marketing Digital profesional pueden llenar tu negocio." />
+  <title>Publicidad en Facebook para Negocios en Cuba | Agencia Señores</title>
+  <meta name="description" content="¿Tus ventas dependen de los grupos de compraventa? Implementa estrategias de publicidad profesional en Facebook e Instagram para MIPYMES en Santa Clara y el centro de Cuba." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
