--- a/articulos/hostales-web-directa.html
+++ b/articulos/hostales-web-directa.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Independencia Digital para Hostales | Blog Señores</title>
-  <meta name="description" content="Las comisiones de Airbnb suben y los pagos se complican. Descubre por qué tu hostal en Trinidad necesita una web de reservas propias." />
+  <title>Diseño Web para Hostales en Cuba: Reservas Directas | Agencia Señores</title>
+  <meta name="description" content="Deja de perder dinero en comisiones de Airbnb. Creamos páginas web de reservas directas para hostales de lujo y casas de renta en Trinidad y Cienfuegos." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
