--- a/articulos/peligro-inventario-mipymes.html
+++ b/articulos/peligro-inventario-mipymes.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>El Peligro de la Libreta en las MIPYMES | Blog Señores</title>
-  <meta name="description" content="El robo hormiga y la falta de Fichas de Costo están desangrando a los negocios en Santa Clara. Descubre por qué la libreta ya no es suficiente." />
+  <title>Software de Inventario para MIPYMES en Santa Clara | Agencia Señores</title>
+  <meta name="description" content="Evita el robo hormiga y cumple con la Ficha de Costo. Software de gestión y facturación offline diseñado para negocios privados en Sancti Spíritus y Villa Clara." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
