--- a/articulos/por-que-web-a-medida.html
+++ b/articulos/por-que-web-a-medida.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>¿Por qué las plantillas web fallan en Cuba? | Blog Señores</title>
-  <meta name="description" content="WordPress vs. Código a Medida. Analizamos por qué una web optimizada es vital para sobrevivir a la conexión de ETECSA." />
+  <title>Desarrollo Web a Medida vs WordPress en Cuba: Velocidad Real | Agencia Señores</title>
+  <meta name="description" content="¿Tu web carga lento con datos móviles? Descubre por qué el código a medida es superior a WordPress para el internet en Cuba. Ingeniería web desde Sancti Spíritus." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
