--- a/articulos/seo-restaurantes-cuba.html
+++ b/articulos/seo-restaurantes-cuba.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEO para Restaurantes en Sancti Spíritus | Blog Señores</title>
-  <meta name="description" content="Por qué los menús en PDF alejan a los clientes y cómo usar Google Maps para llenar tu restaurante en el centro de Cuba." />
+  <title>Marketing para Restaurantes en Sancti Spíritus: SEO y Menús Digitales | Agencia Señores</title>
+  <meta name="description" content="Posiciona tu restaurante en Google Maps. Estrategias de SEO Local y diseño de menús digitales QR optimizados para el turismo en el centro de Cuba." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
