--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
   <link rel="icon" type="image/png" href="img/logo-192.png" sizes="192x192">
   <link rel="apple-touch-icon" href="img/logo-192.png">
-
+  <link rel="canonical" href="https://agenciaseniors.com/" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="css/styles.css">
