--- a/articulos/peligro-inventario-mipymes.html
+++ b/articulos/peligro-inventario-mipymes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Software de Inventario para MIPYMES en Santa Clara | Agencia Señores</title>
-  <meta name="description" content="Evita el robo hormiga y cumple con la Ficha de Costo. Software de gestión y facturación offline diseñado para negocios privados en Sancti Spíritus y Villa Clara." />
+  <meta name="description" content="Evita el robo hormiga y cumple con la Ficha de Costo. Software de gestión y facturación offline para negocios en Sancti Spíritus y Villa Clara." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
