--- a/blog.html
+++ b/blog.html
@@ -3,23 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog | Agencia Señores - Estrategias para el Sector Privado</title>
-  <meta name="description" content="Artículos y análisis sobre marketing digital, software y gestión para negocios privados en Cuba. Sancti Spíritus, Villa Clara y Cienfuegos." />
+  <title>Blog de Estrategia Digital y Software en Cuba | Agencia Señores</title>
+  <meta name="description" content="Recursos y guías profundas sobre SEO, marketing digital y desarrollo de software para MIPYMES en Sancti Spíritus, Santa Clara y Cienfuegos." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/blog.css">
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKF7LR287"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2YKF7LR287');
-</script>
-  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKF7LR287"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-2YKF7LR287');
+  </script>
 </head>
 <body>
 
@@ -30,7 +27,8 @@
   </a>
   <nav>
     <a href="index.html">INICIO</a>
-    <a href="blog.html" style="color: #D4AF37;">BLOG</a> <a href="index.html#contacto">CONTACTO</a>
+    <a href="blog.html" style="color: #D4AF37;">BLOG</a> 
+    <a href="index.html#contacto">CONTACTO</a>
   </nav>
   <button class="menu-btn">☰</button>
 </header>
@@ -40,12 +38,82 @@
     CONOCIMIENTO ESTRATÉGICO <br><span style="color: #D4AF37;">PARA EL SECTOR PRIVADO.</span>
   </h1>
   <p style="max-width: 700px; margin: 20px auto; color: #ccc;">
-    Investigaciones y guías técnicas para dueños de negocios que buscan escalar en el mercado cubano actual.
+    Investigaciones y guías de +2000 palabras para dueños de negocios que buscan dominar el mercado en Sancti Spíritus, Santa Clara y Cienfuegos.
   </p>
 </section>
 
 <div class="blog-grid">
   
+  <article class="blog-card">
+    <img src="img/software-control-inventario-cuba.avif" alt="Ficha de Costo MIPYMES Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">GESTIÓN & SOFTWARE</span>
+      <h2 class="blog-title">La Guía Definitiva de la Ficha de Costo para MIPYMES: Normativa y Automatización</h2>
+      <p class="blog-excerpt">Domina la Res. 148/2023. Aprende a calcular tus costos reales y evitar multas en el nuevo escenario económico cubano.</p>
+      <a href="articulos/guia-ficha-costo-mipyme-cuba.html" class="read-more">LEER GUÍA MAESTRA</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Independencia Digital Hostales Trinidad" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">TURISMO & RENTA</span>
+      <h2 class="blog-title">Soberanía Económica: Por qué tu Hostal en Trinidad debe independizarse de Airbnb</h2>
+      <p class="blog-excerpt">Recupera el 15% de tus ganancias. Estrategias de reservas directas y cobros con TropiPay para casas de renta de lujo.</p>
+      <a href="articulos/soberania-digital-hostales-trinidad.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/estrategia-marketing-digital-redes-sociales-santa-clara.avif" alt="Marketing Digital Santa Clara" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">MARKETING DIGITAL</span>
+      <h2 class="blog-title">Marketing en Santa Clara: ¿Por qué tus publicaciones en redes no están vendiendo?</h2>
+      <p class="blog-excerpt">Estrategias avanzadas para dominar el mercado de Villa Clara más allá de los saturados grupos de compraventa.</p>
+      <a href="articulos/marketing-digital-santa-clara-estrategia.html" class="read-more">VER ESTRATEGIA</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/automatizacion-whatsapp-business-ventas-online.avif" alt="Automatización WhatsApp Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">AUTOMATIZACIÓN</span>
+      <h2 class="blog-title">Ventas 24/7: Convierte tu WhatsApp en una máquina de facturación automática</h2>
+      <p class="blog-excerpt">Guía técnica sobre chatbots y catálogos offline para MIPYMES que no pueden depender de una conexión estable.</p>
+      <a href="articulos/automatizacion-whatsapp-cuba-ventas.html" class="read-more">LEER MÁS</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/marketing-inmobiliario-cienfuegos.avif" alt="Marketing Inmobiliario Cienfuegos" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">INMOBILIARIA</span>
+      <h2 class="blog-title">Marketing Inmobiliario en Cienfuegos: Cómo vender propiedades de lujo en Punta Gorda</h2>
+      <p class="blog-excerpt">Fotografía profesional y SEO inmobiliario para atraer inversores extranjeros y locales a la Perla del Sur.</p>
+      <a href="articulos/marketing-inmobiliario-cienfuegos-lujo.html" class="read-more">GUÍA DE VENTA</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/menu-digital-restaurante-sancti-spiritus.avif" alt="SEO Restaurantes Sancti Spiritus" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">SEO LOCAL</span>
+      <h2 class="blog-title">SEO Gastronómico: Cómo dominar las búsquedas de comida en Sancti Spíritus</h2>
+      <p class="blog-excerpt">Haz que tu restaurante aparezca primero en Google Maps y elimina los pesados menús en PDF que alejan clientes.</p>
+      <a href="articulos/seo-gastronomico-sancti-spiritus.html" class="read-more">PLAN DE POSICIONAMIENTO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/desarrollo-web-codigo-a-medida-vs-wordpress.avif" alt="Código vs WordPress Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">DESARROLLO WEB</span>
+      <h2 class="blog-title">Código a Medida vs. WordPress: Por qué tu negocio en Cuba no puede ser lento</h2>
+      <p class="blog-excerpt">Análisis técnico sobre la velocidad de carga bajo ETECSA y por qué el código puro es la única inversión inteligente.</p>
+      <a href="articulos/codigo-a-medida-vs-wordpress-cuba.html" class="read-more">VER COMPARATIVA</a>
+    </div>
+  </article>
+
   <article class="blog-card">
     <img src="img/diseno-identidad-visual-lujo-cuba.avif" alt="Diseño de Branding Lujo" class="blog-img">
     <div class="blog-content">
@@ -53,66 +121,6 @@
       <h2 class="blog-title">Tu logo barato te está costando clientes: La psicología del precio</h2>
       <p class="blog-excerpt">¿Tu negocio se ve profesional o amateur? Descubre por qué una buena Identidad Visual te permite cobrar más caro.</p>
       <a href="articulos/branding-identidad-visual.html" class="read-more">LEER ARTÍCULO</a>
-    </div>
-  </article>
-
-  <article class="blog-card">
-    <img src="img/estrategia-marketing-digital-redes-sociales-santa-clara.avif" alt="Marketing en Redes Sociales" class="blog-img">
-    <div class="blog-content">
-      <span class="blog-category">MARKETING DIGITAL</span>
-      <h2 class="blog-title">Más allá de Revolico: Por qué tus publicaciones en grupos ya no venden igual</h2>
-      <p class="blog-excerpt">Publicar en grupos de compraventa ya no es suficiente. Aprende cómo las estrategias profesionales pueden llenar tu negocio.</p>
-      <a href="articulos/facebook-ads-cuba.html" class="read-more">LEER ARTÍCULO</a>
-    </div>
-  </article>
-
-  <article class="blog-card">
-    <img src="img/automatizacion-whatsapp-business-ventas-online.avif" alt="WhatsApp Business Automatización" class="blog-img">
-    <div class="blog-content">
-      <span class="blog-category">AUTOMATIZACIÓN</span>
-      <h2 class="blog-title">Convierte tu WhatsApp en una Tienda Online: Vende mientras duermes</h2>
-      <p class="blog-excerpt">Deja de responder lo mismo 100 veces al día. Aprende a usar WhatsApp Business como una herramienta de venta automática.</p>
-      <a href="articulos/automatizacion-whatsapp-negocios.html" class="read-more">LEER ARTÍCULO</a>
-    </div>
-  </article>
-
-  <article class="blog-card">
-    <img src="img/desarrollo-web-codigo-a-medida-vs-wordpress.avif" alt="Código vs Wordpress" class="blog-img">
-    <div class="blog-content">
-      <span class="blog-category">DESARROLLO WEB</span>
-      <h2 class="blog-title">WordPress vs. Código a Medida: ¿Por qué las plantillas fallan en Cuba?</h2>
-      <p class="blog-excerpt">Analizamos por qué una web optimizada con código puro es vital para sobrevivir a la conexión lenta de ETECSA.</p>
-      <a href="articulos/por-que-web-a-medida.html" class="read-more">LEER ARTÍCULO</a>
-    </div>
-  </article>
-
-  <article class="blog-card">
-    <img src="img/software-control-inventario-cuba.avif" alt="Gestión de Inventarios" class="blog-img">
-    <div class="blog-content">
-      <span class="blog-category">GESTIÓN & SOFTWARE</span>
-      <h2 class="blog-title">¿Sigues llevando el inventario en una libreta? El peligro oculto de las MIPYMES</h2>
-      <p class="blog-excerpt">El "robo hormiga" y la falta de Fichas de Costo están desangrando a los negocios. Descubre por qué la libreta ya no es suficiente.</p>
-      <a href="articulos/peligro-inventario-mipymes.html" class="read-more">LEER ARTÍCULO</a>
-    </div>
-  </article>
-
-  <article class="blog-card">
-    <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Hostales y Rentas" class="blog-img">
-    <div class="blog-content">
-      <span class="blog-category">TURISMO & RENTA</span>
-      <h2 class="blog-title">Airbnb se queda con tu ganancia: Por qué tu Hostal necesita una Web Propia</h2>
-      <p class="blog-excerpt">Las comisiones han subido y los pagos se bloquean. Analizamos la matemática detrás de las OTAs y la independencia digital.</p>
-      <a href="articulos/hostales-web-directa.html" class="read-more">LEER ARTÍCULO</a>
-    </div>
-  </article>
-
-  <article class="blog-card">
-    <img src="img/menu-digital-restaurante-sancti-spiritus.avif" alt="Restaurantes y SEO" class="blog-img">
-    <div class="blog-content">
-      <span class="blog-category">SEO LOCAL</span>
-      <h2 class="blog-title">¿Por qué tu Restaurante es Invisible en Sancti Spíritus? Guía de Google Maps</h2>
-      <p class="blog-excerpt">La calidad de la comida no importa si el cliente no te encuentra. Cómo usar el SEO Local para llenar tus mesas en 2025.</p>
-      <a href="articulos/seo-restaurantes-cuba.html" class="read-more">LEER ARTÍCULO</a>
     </div>
   </article>
 
