--- a/articulos/guia-ficha-costo-mipyme-cuba.html
+++ b/articulos/guia-ficha-costo-mipyme-cuba.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Guía Completa: Ficha de Costo para MIPYMES en Cuba | SEÑORES</title>
-  <meta name="description" content="Domina la Resolución 148/2023. Guía exhaustiva sobre formación de precios, fichas de costo técnicas y automatización para negocios privados en Cuba." />
+  <title>Software de Inventario para MIPYMES en Santa Clara | Agencia Señores</title>
+<meta name="description" content="Evita el robo hormiga y cumple con la Ficha de Costo. Software de gestión y facturación offline para negocios en Sancti Spíritus y Villa Clara." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/guia-ficha-costo-mipyme-cuba.html" />
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
