--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     
     <a href="menues/d_lavida_bar/index.html" class="selection-card">
       <div class="selection-img-container">
-        <img src="img/menu-digital-restaurante-sancti-spiritus.avif" alt="D' La Vida Bar" class="selection-img">
+        <img src="img/bar_vida.avif" alt="D' La Vida Bar" class="selection-img">
         <div class="overlay">
           <span class="btn-ver-menu">VER MENÚ</span>
         </div>
