--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
     CONOCIMIENTO ESTRATÉGICO <br><span style="color: #D4AF37;">PARA EL SECTOR PRIVADO.</span>
   </h1>
   <p style="max-width: 700px; margin: 20px auto; color: #ccc;">
-    Investigaciones y guías de +2000 palabras para dueños de negocios que buscan dominar el mercado en Sancti Spíritus, Santa Clara y Cienfuegos.
+    Investigaciones y guías estratégicas para dueños de negocios que buscan dominar el mercado en Sancti Spíritus, Santa Clara y Cienfuegos.
   </p>
 </section>
 
@@ -121,6 +121,66 @@
       <h2 class="blog-title">Tu logo barato te está costando clientes: La psicología del precio</h2>
       <p class="blog-excerpt">¿Tu negocio se ve profesional o amateur? Descubre por qué una buena Identidad Visual te permite cobrar más caro.</p>
       <a href="articulos/branding-identidad-visual.html" class="read-more">LEER ARTÍCULO</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/software-gestion-mipymes-santa-clara.avif" alt="Peligro Inventario Libreta" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">GESTIÓN & SOFTWARE</span>
+      <h2 class="blog-title">¿Sigues llevando el inventario en una libreta? El peligro oculto</h2>
+      <p class="blog-excerpt">Análisis sobre el robo hormiga y las ineficiencias de la gestión analógica en los nuevos negocios cubanos.</p>
+      <a href="articulos/peligro-inventario-mipymes.html" class="read-more">LEER MÁS</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/desarrollo-web-codigo-a-medida-vs-wordpress.avif" alt="Web a medida Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">DESARROLLO WEB</span>
+      <h2 class="blog-title">WordPress vs. Código a Medida: ¿Por qué las plantillas fallan bajo ETECSA?</h2>
+      <p class="blog-excerpt">Un desglose técnico sobre por qué tu web debe ser ultraligera para convertir visitas en ventas reales.</p>
+      <a href="articulos/por-que-web-a-medida.html" class="read-more">VER ANÁLISIS</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Web para Hostales Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">TURISMO & RENTA</span>
+      <h2 class="blog-title">Airbnb se queda con tu ganancia: Por qué necesitas una Web Propia</h2>
+      <p class="blog-excerpt">Estrategias de reservas directas para dejar de pagar comisiones excesivas a las plataformas extranjeras.</p>
+      <a href="articulos/hostales-web-directa.html" class="read-more">REUPERAR MARGEN</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/diseno-web-restaurantes-trinidad-cuba.avif" alt="SEO para Restaurantes Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">MARKETING GASTRONÓMICO</span>
+      <h2 class="blog-title">¿Tu Restaurante es Invisible? Guía de Supervivencia Digital</h2>
+      <p class="blog-excerpt">Cómo dominar Google Maps y por qué los menús en PDF están matando la experiencia de tus clientes.</p>
+      <a href="articulos/seo-restaurantes-cuba.html" class="read-more">SER VISIBLE</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/estrategia-marketing-digital-redes-sociales-santa-clara.avif" alt="Publicidad en Facebook Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">MARKETING DIGITAL</span>
+      <h2 class="blog-title">Más allá de Revolico: Por qué el spam en grupos ya no vende igual</h2>
+      <p class="blog-excerpt">Aprende a usar Facebook Ads de forma profesional para atraer clientes que valoran la calidad, no solo el precio.</p>
+      <a href="articulos/facebook-ads-cuba.html" class="read-more">ESTRATEGIA ADS</a>
+    </div>
+  </article>
+
+  <article class="blog-card">
+    <img src="img/automatizacion-whatsapp-business-ventas-online.avif" alt="WhatsApp Business Cuba" class="blog-img">
+    <div class="blog-content">
+      <span class="blog-category">AUTOMATIZACIÓN</span>
+      <h2 class="blog-title">Convierte tu WhatsApp en una Tienda Online 24/7</h2>
+      <p class="blog-excerpt">Configuración de catálogos y respuestas rápidas para atender a tus clientes sin importar el horario o la conexión.</p>
+      <a href="articulos/automatizacion-whatsapp-negocios.html" class="read-more">EMPEZAR AHORA</a>
     </div>
   </article>
 
