--- a/blog.html
+++ b/blog.html
@@ -45,17 +45,17 @@
 <div class="blog-grid">
   
   <article class="blog-card">
-    <img src="img/software-control-inventario-cuba.avif" alt="Ficha de Costo MIPYMES Cuba" class="blog-img">
+    <img src="img/software-control-inventario-cuba.avif" alt="Software NEXUS en una oficina moderna de Cuba mostrando la ficha de costo digital y gráficos financieros para MIPYMES" class="blog-img">
     <div class="blog-content">
       <span class="blog-category">GESTIÓN & SOFTWARE</span>
       <h2 class="blog-title">La Guía Definitiva de la Ficha de Costo para MIPYMES: Normativa y Automatización</h2>
       <p class="blog-excerpt">Domina la Res. 148/2023. Aprende a calcular tus costos reales y evitar multas en el nuevo escenario económico cubano.</p>
-      <a href="articulos/guia-ficha-costo-mipyme-cuba.html" class="read-more">LEER GUÍA MAESTRA</a>
+      <a href="articulos/guia-ficha-costo-mipyme-cuba-nexus-software.html" class="read-more">LEER GUÍA MAESTRA</a>
     </div>
   </article>
 
   <article class="blog-card">
-    <img src="img/diseno-web-hostales-lujo-trinidad.avif" alt="Independencia Digital Hostales Trinidad" class="blog-img">
+    <img src="img/hostales-lujo-trinidad-reservas-directas-cuba" alt="Habitación de lujo en un hostal colonial de Trinidad, Cuba, con una tablet que muestra el sistema de reservas directas." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">TURISMO & RENTA</span>
       <h2 class="blog-title">Soberanía Económica: Por qué tu Hostal en Trinidad debe independizarse de Airbnb</h2>
@@ -65,7 +65,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="img/estrategia-marketing-digital-redes-sociales-santa-clara.avif" alt="Marketing Digital Santa Clara" class="blog-img">
+    <img src="img/marketing-digital-santa-clara-estrategia-negocios.avif" alt="Emprendedor en Santa Clara analizando métricas de marketing digital e insights de Instagram en un café moderno cerca del Parque Vidal." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">MARKETING DIGITAL</span>
       <h2 class="blog-title">Marketing en Santa Clara: ¿Por qué tus publicaciones en redes no están vendiendo?</h2>
@@ -75,7 +75,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="img/automatizacion-whatsapp-business-ventas-online.avif" alt="Automatización WhatsApp Cuba" class="blog-img">
+    <img src="img/automatizacion-whatsapp-business-ventas-online.avif" alt="Smartphone con respuesta automática de chatbot en WhatsApp Business para ventas 24/7 y gestión de pedidos en Cuba." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">AUTOMATIZACIÓN</span>
       <h2 class="blog-title">Ventas 24/7: Convierte tu WhatsApp en una máquina de facturación automática</h2>
@@ -85,7 +85,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="img/marketing-inmobiliario-cienfuegos.avif" alt="Marketing Inmobiliario Cienfuegos" class="blog-img">
+    <img src="img/marketing-inmobiliario-cienfuegos-lujo-punta-gorda.avif" alt="Mansión de lujo en Punta Gorda, Cienfuegos, con un cartel de venta profesional frente a la bahía al atardecer." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">INMOBILIARIA</span>
       <h2 class="blog-title">Marketing Inmobiliario en Cienfuegos: Cómo vender propiedades de lujo en Punta Gorda</h2>
@@ -95,7 +95,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="img/menu-digital-restaurante-sancti-spiritus.avif" alt="SEO Restaurantes Sancti Spiritus" class="blog-img">
+    <img src="img/seo-gastronomico-restaurantes-sancti-spiritus" alt="Plato gourmet en un restaurante de Sancti Spíritus junto a un celular que muestra el posicionamiento número uno en Google Maps." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">SEO LOCAL</span>
       <h2 class="blog-title">SEO Gastronómico: Cómo dominar las búsquedas de comida en Sancti Spíritus</h2>
@@ -105,7 +105,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="img/desarrollo-web-codigo-a-medida-vs-wordpress.avif" alt="Código vs WordPress Cuba" class="blog-img">
+    <img src="img/desarrollo-web-codigo-a-medida-vs-wordpress.avif" alt="Comparativa de rendimiento web mostrando una puntuación de 100 en Google Lighthouse para sitios con código a medida optimizados para ETECSA." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">DESARROLLO WEB</span>
       <h2 class="blog-title">Código a Medida vs. WordPress: Por qué tu negocio en Cuba no puede ser lento</h2>
