--- a/blog.html
+++ b/blog.html
@@ -55,7 +55,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="img/hostales-lujo-trinidad-reservas-directas-cuba" alt="Habitación de lujo en un hostal colonial de Trinidad, Cuba, con una tablet que muestra el sistema de reservas directas." class="blog-img">
+    <img src="img/hostales-lujo-trinidad-reservas-directas-cuba.avif" alt="Habitación de lujo en un hostal colonial de Trinidad, Cuba, con una tablet que muestra el sistema de reservas directas." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">TURISMO & RENTA</span>
       <h2 class="blog-title">Soberanía Económica: Por qué tu Hostal en Trinidad debe independizarse de Airbnb</h2>
@@ -95,7 +95,7 @@
   </article>
 
   <article class="blog-card">
-    <img src="img/seo-gastronomico-restaurantes-sancti-spiritus" alt="Plato gourmet en un restaurante de Sancti Spíritus junto a un celular que muestra el posicionamiento número uno en Google Maps." class="blog-img">
+    <img src="img/seo-gastronomico-restaurantes-sancti-spiritus.avif" alt="Plato gourmet en un restaurante de Sancti Spíritus junto a un celular que muestra el posicionamiento número uno en Google Maps." class="blog-img">
     <div class="blog-content">
       <span class="blog-category">SEO LOCAL</span>
       <h2 class="blog-title">SEO Gastronómico: Cómo dominar las búsquedas de comida en Sancti Spíritus</h2>
