--- a/articulos/soberania-digital-hostales-trinidad.html
+++ b/articulos/soberania-digital-hostales-trinidad.html
@@ -58,7 +58,8 @@
       </ul>
 
       <h3 style="margin-top: 40px;">Análisis de Rentabilidad: ¿Cuánto ahorras realmente?</h3>
-      <table style="width:100%; border-collapse: collapse; margin: 20px 0; background: #111; border: 1px solid #333;">
+      <div style="overflow-x: auto; width: 100%; -webkit-overflow-scrolling: touch; margin: 20px 0;">
+      <table style="min-width: 600px; border-collapse: collapse; background: #111; border: 1px solid #333;">
         <thead>
           <tr style="background: #1a1a1a; border-bottom: 2px solid #D4AF37;">
             <th style="padding: 15px; text-align: left; color: #D4AF37;">Concepto</th>
@@ -84,6 +85,7 @@
           </tr>
         </tbody>
       </table>
+      </div>
 
       <h2>4. Tu Activo más Valioso: Tu Base de Datos</h2>
       <p>Cuando un huésped reserva por Airbnb, el cliente le pertenece a Airbnb. Cuando reserva por tu web, el cliente te pertenece a ti. Esto te permite realizar campañas de correo electrónico personalizadas, ofrecer descuentos para su próxima visita y construir una relación que dure años, no solo una estancia.</p>
