--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   <style>
     body { display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; text-align: center; }
     h1 { font-size: 80px; color: var(--dorado-suave); margin-bottom: 0; }
-    p { color: #888; max-width: 400px; }
+    p { color: #888; max-width: 90%; }
   </style>
 </head>
 <body>
