--- a/articulos/codigo-a-medida-vs-wordpress-cuba.html
+++ b/articulos/codigo-a-medida-vs-wordpress-cuba.html
@@ -6,7 +6,9 @@
   <title>Código a Medida vs WordPress en Cuba: La Verdad sobre la Velocidad | SEÑORES</title>
   <meta name="description" content="¿WordPress o Código Puro? Analizamos por qué el desarrollo web a medida es la única opción viable para negocios serios en Cuba bajo las redes de ETECSA." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/codigo-a-medida-vs-wordpress-cuba.html" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
