--- a/articulos/peligro-inventario-mipymes.html
+++ b/articulos/peligro-inventario-mipymes.html
@@ -6,7 +6,9 @@
   <title>Software de Inventario para MIPYMES en Santa Clara | Agencia Señores</title>
   <meta name="description" content="Evita el robo hormiga y cumple con la Ficha de Costo. Software de gestión y facturación offline para negocios en Sancti Spíritus y Villa Clara." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
