--- a/articulos/por-que-web-a-medida.html
+++ b/articulos/por-que-web-a-medida.html
@@ -6,7 +6,9 @@
   <title>Desarrollo Web a Medida vs WordPress en Cuba: Velocidad Real | Agencia Señores</title>
   <meta name="description" content="¿Tu web carga lento con datos móviles? Descubre por qué el código a medida es superior a WordPress para el internet en Cuba. Ingeniería web desde Sancti Spíritus." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
