--- a/articulos/soberania-digital-hostales-trinidad.html
+++ b/articulos/soberania-digital-hostales-trinidad.html
@@ -6,7 +6,9 @@
   <title>Hostales en Trinidad: Independencia Digital y Reservas Directas | SEÑORES</title>
   <meta name="description" content="Recupera tu margen de beneficio. Análisis profundo sobre por qué los hostales en Trinidad deben migrar de Airbnb a sistemas de reservas directas en 2025." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/soberania-digital-hostales-trinidad.html" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
