--- a/articulos/branding-identidad-visual.html
+++ b/articulos/branding-identidad-visual.html
@@ -6,7 +6,9 @@
   <title>Diseño de Logotipos y Branding en Cuba: Imagen de Lujo | Agencia Señores</title>
 <meta name="description" content="Eleva el valor de tu marca. Diseño de identidad visual, logotipos y manuales de marca para negocios que buscan exclusividad en Cienfuegos y el centro de Cuba." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
