--- a/articulos/guia-ficha-costo-mipyme-cuba.html
+++ b/articulos/guia-ficha-costo-mipyme-cuba.html
@@ -6,7 +6,9 @@
   <title>Software de Inventario para MIPYMES en Santa Clara | Agencia Señores</title>
 <meta name="description" content="Evita el robo hormiga y cumple con la Ficha de Costo. Software de gestión y facturación offline para negocios en Sancti Spíritus y Villa Clara." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/guia-ficha-costo-mipyme-cuba.html" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
