--- a/articulos/hostales-web-directa.html
+++ b/articulos/hostales-web-directa.html
@@ -6,7 +6,9 @@
   <title>Diseño Web para Hostales en Cuba: Reservas Directas | Agencia Señores</title>
   <meta name="description" content="Deja de perder dinero en comisiones de Airbnb. Creamos páginas web de reservas directas para hostales de lujo y casas de renta en Trinidad y Cienfuegos." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
