--- a/articulos/marketing-digital-santa-clara-estrategia.html
+++ b/articulos/marketing-digital-santa-clara-estrategia.html
@@ -6,7 +6,9 @@
   <title>Marketing Digital en Santa Clara: Estrategias para MIPYMES en 2025 | SEÑORES</title>
   <meta name="description" content="¿Tus redes sociales no venden? Guía avanzada de marketing digital en Santa Clara. Aprende a destacar en Instagram y Facebook sin depender de grupos de compraventa." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/marketing-digital-santa-clara-estrategia.html" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
