--- a/articulos/seo-gastronomico-sancti-spiritus.html
+++ b/articulos/seo-gastronomico-sancti-spiritus.html
@@ -6,7 +6,9 @@
   <title>SEO para Restaurantes en Sancti Spíritus: Llena tu local | SEÑORES</title>
   <meta name="description" content="Guía maestra de SEO Gastronómico. Cómo posicionar tu restaurante en Sancti Spíritus en Google Maps y por qué los menús en PDF están matando tus ventas." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/seo-gastronomico-sancti-spiritus.html" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
