--- a/articulos/automatizacion-whatsapp-cuba-ventas.html
+++ b/articulos/automatizacion-whatsapp-cuba-ventas.html
@@ -6,7 +6,9 @@
   <title>Automatiza tu WhatsApp Business en Cuba: Vende 24/7 | SEÑORES</title>
   <meta name="description" content="Convierte tu WhatsApp en una máquina de ventas. Guía completa sobre chatbots, catálogos automáticos y software de gestión offline para MIPYMES cubanas." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/automatizacion-whatsapp-cuba-ventas.html" />
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
