--- a/articulos/automatizacion-whatsapp-negocios.html
+++ b/articulos/automatizacion-whatsapp-negocios.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Automatización de WhatsApp Business en Cuba: Chatbots y Ventas | Agencia Señores</title>
-<meta name="description" content="Configuración de respuestas automáticas y catálogos en WhatsApp. Atiende a tus clientes 24/7 sin esfuerzo. Soluciones de automatización para negocios cubanos." />
+  <meta name="description" content="Configuración de respuestas automáticas y catálogos en WhatsApp. Atiende a tus clientes 24/7 sin esfuerzo. Soluciones de automatización para negocios cubanos." />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="../img/logo-192.png">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/blog.css">
