--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       </div>
     </a>
 
-    <a href="menues/la-casona.html" class="selection-card">
+    <a href="menues/la-casona/index.html" class="selection-card">
       <div class="selection-img-container">
         <img src="img/diseno-web-restaurantes-trinidad-cuba.avif" alt="La Casona" class="selection-img">
         <div class="overlay">
@@ -268,7 +268,7 @@
       </div>
       <div class="selection-info">
         <h4>LA CASONA</h4>
-        <p>[PONER DIRECCIÓN AQUÍ]</p>
+        <p>Circuito Nte Yaguajay</p>
       </div>
     </a>
 
@@ -413,3 +413,4 @@
 
 </body>
 </html>
+
