--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <a href="menues/la-casona/index.html" class="selection-card">
       <div class="selection-img-container">
-        <img src="img/diseno-web-restaurantes-trinidad-cuba.avif" alt="La Casona" class="selection-img">
+        <img src="img/la-casona.jpg" alt="La Casona" class="selection-img">
         <div class="overlay">
           <span class="btn-ver-menu">VER MENÚ</span>
         </div>
@@ -413,4 +413,5 @@
 
 </body>
 </html>
+
 
