--- a/articulos/guia-ficha-costo-mipyme-cuba.html
+++ b/articulos/guia-ficha-costo-mipyme-cuba.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Software de Inventario para MIPYMES en Santa Clara | Agencia Señores</title>
-<meta name="description" content="Evita el robo hormiga y cumple con la Ficha de Costo. Software de gestión y facturación offline para negocios en Sancti Spíritus y Villa Clara." />
+ <meta name="description" content="Domina la Resolución 148/2023 del MFP. Guía completa sobre cómo elaborar la Ficha de Costo para MIPYMES en Cuba y evitar multas por precios abusivos." />
   <link rel="canonical" href="https://agenciaseniors.com/articulos/guia-ficha-costo-mipyme-cuba.html" />
   <link rel="icon" type="image/png" href="../img/favicon.png" sizes="32x32">
   <link rel="icon" type="image/png" href="../img/logo-192.png" sizes="192x192">
