--- a/articulos/marketing-digital-santa-clara-estrategia.html
+++ b/articulos/marketing-digital-santa-clara-estrategia.html
@@ -19,6 +19,29 @@
     gtag('js', new Date());
     gtag('config', 'G-2YKF7LR287');
   </script>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Agencia Señores - Santa Clara",
+  "image": "https://agenciaseniors.com/img/marketing-digital-santa-clara-estrategia-negocios.avif",
+  "description": "Consultoría estratégica de marketing digital y redes sociales para negocios privados en Villa Clara.",
+  "url": "https://agenciaseniors.com/articulos/marketing-digital-santa-clara-estrategia.html",
+  "telephone": "+5356621636",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Santa Clara",
+    "addressRegion": "Villa Clara",
+    "addressCountry": "CU"
+  },
+  "areaServed": [
+    "Santa Clara",
+    "Placetas",
+    "Remedios"
+  ],
+  "priceRange": "$$"
+}
+</script>
 </head>
 <body>
 
