--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   "@context": "https://schema.org",
   "@type": "ProfessionalService",
   "name": "Señores Agencia",
-  "image": "https://agenciaseniors.com/img/favicon.png",
+  "image": "https://agenciaseniors.com/img/diseno-identidad-visual-lujo-cuba.avif",
   "description": "Agencia de desarrollo de software y marketing digital especializada en negocios privados en Cuba.",
   "address": {
     "@type": "PostalAddress",
